# v4_cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  deny.toml  test_repl.py
.github/workflows/: ci.yml  release.yml  security.yml
examples/: README.md  led_off.v4b  led_slow.v4b  led_sos.v4b
examples/nanoc6/: led.fs
scripts/: README.md  test_device.sh
src/: commands.rs  error.rs  lib.rs  main.rs  protocol.rs  repl.rs  serial.rs  v4front_ffi.rs
src/commands/: compile.rs  exec.rs  ping.rs  push.rs  repl.rs  reset.rs
src/protocol/: crc8.rs  frame.rs  types.rs
tests/: hardware_test.rs
