[package]
name = "v4_cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Akihito Kirisaki"]
license = "MIT OR Apache-2.0"
description = "CLI tool for V4 VM bytecode deployment"
repository = "https://github.com/kirisaki/v4-cli"

[[bin]]
name = "v4"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serialport = "4.5"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
rustyline = "14.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
