[package]
name = "v4_cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Akihito Kirisaki"]
license = "MIT OR Apache-2.0"
description = "CLI tool for V4 VM bytecode deployment"
repository = "https://github.com/V4-project/v4_cli"
homepage = "https://github.com/V4-project/v4_cli"
documentation = "https://docs.rs/v4_cli"
readme = "README.md"
keywords = ["v4", "vm", "embedded", "bytecode", "cli"]
categories = ["command-line-utilities", "embedded", "development-tools"]

[[bin]]
name = "v4"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serialport = "4.5"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
rustyline = "14.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[build-dependencies]
cmake = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
